--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -83,7 +83,8 @@ nodist_asc_weaponguide_OBJECTS = weaponguide.$(OBJEXT) \
 	fieldimageloader.$(OBJEXT) stdio-errorhandler.$(OBJEXT) \
 	playercolor.$(OBJEXT) versionidentifier.$(OBJEXT) \
 	package.$(OBJEXT) packagerepository.$(OBJEXT) \
-	accessconstraints-editor.$(OBJEXT)
+	accessconstraints-editor.$(OBJEXT) \
+	unitcostcalculator-standard.$(OBJEXT)
 asc_weaponguide_OBJECTS = $(nodist_asc_weaponguide_OBJECTS)
 asc_weaponguide_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 	$(top_builddir)/source/sdl/libsdl.la \
@@ -304,7 +305,7 @@ nodist_asc_weaponguide_SOURCES = weaponguide.cpp  basestrm.cpp simplestream.cpp 
                                  textfileparser.cpp containerbasetype.cpp   terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp \
                                  stringtokenizer.cpp research.cpp itemrepository.cpp groupfile.cpp guidegenerator.cpp infopage.cpp overviewmapimage.cpp \
                                  iconrepository.cpp objects.cpp unitset.cpp fieldimageloader.cpp stdio-errorhandler.cpp playercolor.cpp versionidentifier.cpp \
-                                 package.cpp packagerepository.cpp accessconstraints-editor.cpp
+                                 package.cpp packagerepository.cpp accessconstraints-editor.cpp unitcostcalculator-standard.cpp
 
 #asc_raw2pcx_SOURCES     = raw2pcx.cpp      basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp  terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp research.cpp itemrepository.cpp
 asc_mount_LDADD = $(SDL_LIBS) $(SIGC_LIBS) $(BZIP2_LIBS) $(top_builddir)/source/tools/lib/libasc_cmd.la
@@ -445,6 +446,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textfileparser.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textfiletags.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/typen.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unitcostcalculator-standard.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unitset.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vehicletype.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/versionidentifier.Po@am__quote@
