--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -584,6 +584,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\unitcostcalculator-standard.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\unitset.cpp"
 				>
 			</File>
@@ -605,6 +609,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\viewcalculation.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\weaponrangelayer.cpp"
 				>
 			</File>
 			<File
