--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -648,6 +648,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\unitcostcalculator-standard.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\unitset.cpp"
 				>
 			</File>
@@ -669,6 +673,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\viewcalculation.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\weaponrangelayer.cpp"
 				>
 			</File>
 			<File
