improved map loading in editor

--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -1,4 +1,4 @@
-MAINTAINERCLEANFILES = Makefile.in asc.6 asc_demount.6 asc_mount.6 asc_mapedit.6 asc_makegfx.6 asc_weaponguide.6
+MAINTAINERCLEANFILES = Makefile.in asc.6 asc_demount.6 asc_mount.6 asc_mapedit.6 asc_weaponguide.6
 
-dist_man_MANS = $(srcdir)/asc.6 $(srcdir)/asc_demount.6 $(srcdir)/asc_mount.6 $(srcdir)/asc_mapedit.6 $(srcdir)/asc_makegfx.6 $(srcdir)/asc_weaponguide.6
+dist_man_MANS = $(srcdir)/asc.6 $(srcdir)/asc_demount.6 $(srcdir)/asc_mount.6 $(srcdir)/asc_mapedit.6 $(srcdir)/asc_weaponguide.6
 
