--- a/source/unix/asc/Makefile.am
+++ b/source/unix/asc/Makefile.am
@@ -34,7 +34,7 @@ containercontrols.cpp containerbase-functions.cpp windowing.cpp turncontrol.cpp 
 playercolor.cpp pg_mapdisplay.cpp autotraining.cpp researchexecution.cpp luacommandwriter.cpp \
 campaignactionrecorder.cpp loggingoutput.cpp versionidentifier.cpp package.cpp packagemanager.cpp \
 packagerepository.cpp dataversioncheck.cpp i18n.cpp accessconstraints-game.cpp contextutils.cpp \
-unitcostcalculator-standard.cpp weaponrangelayer.cpp
+unitcostcalculator-standard.cpp weaponrangelayer.cpp unitcostcalculator-pbp.cpp
 
 commonLibs =  $(top_builddir)/source/libs/triangul/libtriangul.la \
 $(top_builddir)/source/ai/libai.la $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
