updated windows build system with new files

--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -584,6 +584,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\unitcostcalculator-pbp.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\unitcostcalculator-standard.cpp"
 				>
 			</File>
