--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -648,6 +648,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\unitcostcalculator-pbp.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\unitcostcalculator-standard.cpp"
 				>
 			</File>
