--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -571,6 +571,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\unitcostcalculator-pbp.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\unitcostcalculator-standard.cpp"
 				>
 			</File>
