--- a/source/unittests/Makefile.in
+++ b/source/unittests/Makefile.in
@@ -69,7 +69,7 @@ am_libunittests_la_OBJECTS = movementtest.lo attacktest.lo \
 	transfercontroltest.lo recyclingtest.lo diplomacytest.lo \
 	researchtest.lo objectconstructiontest.lo actiontest.lo \
 	eventtest.lo jumptest.lo testversionidentifier.lo \
-	streamencoding.lo maptest.lo
+	streamencoding.lo maptest.lo repairtest.lo
 libunittests_la_OBJECTS = $(am_libunittests_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -285,7 +285,7 @@ AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ -I$(top_srcdir)/source
 noinst_LTLIBRARIES = libunittests.la
 libunittests_la_SOURCES = movementtest.cpp attacktest.cpp unittestutil.cpp main.cpp ai-move1.cpp viewtest.cpp ai-service1.cpp transfercontroltest.cpp \
                           recyclingtest.cpp diplomacytest.cpp researchtest.cpp objectconstructiontest.cpp actiontest.cpp eventtest.cpp jumptest.cpp \
-                          testversionidentifier.cpp streamencoding.cpp maptest.cpp
+                          testversionidentifier.cpp streamencoding.cpp maptest.cpp repairtest.cpp
 
 libunittests_la_LIBADD = @SDL_LIBS@
 EXTRA_DIST = $(srcdir)/*.h
@@ -353,6 +353,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/movementtest.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/objectconstructiontest.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/recyclingtest.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/repairtest.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/researchtest.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/streamencoding.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/testversionidentifier.Plo@am__quote@
