Update msvc project files

--- a/source/libs/sdlmm/SDLmm/SDLmm.vcproj
+++ b/source/libs/sdlmm/SDLmm/SDLmm.vcproj
@@ -46,6 +46,7 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
+				DefaultCharIsUnsigned="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -107,7 +108,7 @@
 				Name="VCCLCompilerTool"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="2"
-				DefaultCharIsUnsigned="true"
+				DefaultCharIsUnsigned="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
