--- a/source/libs/triangul/triangulate.vcproj
+++ b/source/libs/triangul/triangulate.vcproj
@@ -49,6 +49,7 @@
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="false"
+				DefaultCharIsUnsigned="false"
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\Release/triangulate.pch"
 				AssemblerListingLocation=".\Release/"
@@ -123,7 +124,7 @@
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				BufferSecurityCheck="false"
-				DefaultCharIsUnsigned="true"
+				DefaultCharIsUnsigned="false"
 				RuntimeTypeInfo="true"
 				PrecompiledHeaderFile=".\Debug/triangulate.pch"
 				AssemblerListingLocation=".\Debug/"
