--- a/config.h.in
+++ b/config.h.in
@@ -6,6 +6,9 @@
 /* Define to 1 if you have the <bitset> header file. */
 #undef HAVE_BITSET
 
+/* Define to 1 if you have the <boost/unordered_map.hpp> header file. */
+#undef HAVE_BOOST_UNORDERED_MAP_HPP
+
 /* Define to 1 if you have the <dirent.h> header file, and it defines `DIR'.
    */
 #undef HAVE_DIRENT_H
