--- a/Makefile.in
+++ b/Makefile.in
@@ -317,7 +317,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
-SUBDIRS = source data doc installer unittester @extradatadir@
+SUBDIRS = source data doc installer @extradatadir@ unittester 
 EXTRA_DIST = asc.kdevelop AUTHORS COPYING ChangeLog INSTALL README TODO asc.lsm bootstrap asc.suse.spec mac_configure
 AUTOMAKE_OPTIONS = foreign
 all: config.h
